--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Dit is een test</h1>
-<h2>Dit is een test met een extra h2 lijn</h2>
+<h2>Dit is een test met een extra h2 lijn in Tak1</h2>
+<h3>Dit is een test met een extra h3 lijn in Tak2</h3>
 </body>
 </html>
