Met drie extra div's

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Testfile nr2</h1>
-<ul>
+<ul>  
 	<li>1.</li>
 	<li>2.</li>
 	<li>3.</li>
@@ -15,6 +15,10 @@
 	<li>7.</li>
 	<li>8.</li>
 </ul>
+<div class="test"></div>
+<div class="test"></div>
+<div class="test"></div>
+
 
 </body>
 </html>
