--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
 <h1>Dit is master branch de hoofdtak</h1>
+<h2>En een h2 toegevoegd</h2>
+<h3>En oon nog een h3</h3>
 </body>
 </html>
