--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 <h2>En een h2 toegevoegd</h2>
 <h3>En oon nog een h3</h3>
 <h4>En nog een h4</h4>
-=======
-<h1>Dit is een test</h1>
-<h2>Dit is een test met een extra h2 lijn in Tak1</h2>
-<h3>Dit is een test met een extra h3 lijn in Tak2</h3>
->>>>>>> tak2
+<pre>
+	    -=[ teapot ]=-
+
+       _...._
+     .'  _ _ `.
+    | ."` ^ `". _,
+    \_;`"---"`|//
+      |       ;/
+      \_     _/
+        `"""`
+</pre>
+
 </body>
 </html>
